--- a/build.xml
+++ b/build.xml
@@ -15,15 +15,13 @@
   <target name="compass:config"
           description="Configures Compass for the project.">
     <exec command="${compass.cmd.install}"
-          dir="${compass.project.dir}"
           passthru="true"
           checkreturn="true" />
   </target>
 
   <target name="compass:clean"
           description="Deletes old Sass files through bundler.">
-    <exec command="${compass.cmd.clean}"
-          dir="${compass.project.dir}"
+    <exec command="${compass.cmd.clean} ${compass.project.dir}"
           passthru="true"
           checkreturn="true" />
   </target>
@@ -31,8 +29,7 @@
   <target name="compass:compile"
           description="Compiles Sass files through bundler."
           depends="compass:clean">
-    <exec command="${compass.cmd.compile}"
-          dir="${compass.project.dir}"
+    <exec command="${compass.cmd.compile} ${compass.project.dir}"
           passthru="true"
           checkreturn="true" />
   </target>
@@ -40,8 +37,7 @@
   <target name="compass:watch"
           description="Watches Sass files for changes and compiles them through bundler."
           depends="compass:clean">
-    <exec command="${compass.cmd.watch}"
-          dir="${compass.project.dir}"
+    <exec command="${compass.cmd.watch} ${compass.project.dir}"
           passthru="true"
           checkreturn="true" />
   </target>
@@ -58,7 +54,6 @@
           passthru="true"
           checkreturn="true" />
     <exec command="${rvm.cmd.gemset} do ${compass.cmd.install}"
-          dir="${compass.project.dir}"
           passthru="true"
           checkreturn="true" />
   </target>
@@ -66,8 +61,7 @@
   <target name="compass:clean-rvm"
           description="Deletes old Sass files through bundler using RVM."
           depends="compass:load-properties-rvm">
-    <exec command="${rvm.cmd.gemset} do ${compass.cmd.clean}"
-          dir="${compass.project.dir}"
+    <exec command="${rvm.cmd.gemset} do ${compass.cmd.clean} ${compass.project.dir}"
           passthru="true"
           checkreturn="true" />
   </target>
@@ -75,8 +69,7 @@
   <target name="compass:compile-rvm"
           description="Compiles Sass files through bundler using RVM."
           depends="compass:clean-rvm">
-    <exec command="${rvm.cmd.gemset} do ${compass.cmd.compile}"
-          dir="${compass.project.dir}"
+    <exec command="${rvm.cmd.gemset} do ${compass.cmd.compile} ${compass.project.dir}"
           passthru="true"
           checkreturn="true" />
   </target>
@@ -84,8 +77,7 @@
   <target name="compass:watch-rvm"
           description="Watches Sass files for changes and compiles them through bundler using RVM."
           depends="compass:clean-rvm">
-    <exec command="${rvm.cmd.gemset} do ${compass.cmd.watch}"
-          dir="${compass.project.dir}"
+    <exec command="${rvm.cmd.gemset} do ${compass.cmd.watch} ${compass.project.dir}"
           passthru="true"
           checkreturn="true" />
   </target>
@@ -93,12 +85,12 @@
   <target name="compass:load-properties-rvm"
           description="Load RVM specific properties used in this project."
           hidden="true">
-    <loadfile property="rvm.ruby.version" file="${compass.project.dir}/.ruby-version">
+    <loadfile property="rvm.ruby.version" file="${project.basedir}/.ruby-version">
       <filterchain>
         <striplinebreaks />
       </filterchain>
     </loadfile>
-    <loadfile property="rvm.ruby.gemset" file="${compass.project.dir}/.ruby-gemset">
+    <loadfile property="rvm.ruby.gemset" file="${project.basedir}/.ruby-gemset">
       <filterchain>
         <striplinebreaks />
       </filterchain>
